--- a/app/views/posts.template.html
+++ b/app/views/posts.template.html
@@ -1,3 +1,11 @@
 <section id="posts">
-
+	<div class="post-item card" ng-repeat="post in postsCtl.posts">
+		<img ng-src="{{post.img}}" alt="" />
+		<div class="card-body">
+			<h4>{{post.title}}</h4>
+			<hr>
+			<p>{{post.body}}</p>
+			<a ng-href="#/posts/{{post.id}}/{{post.slug}}" class="btn">Read More</a>
+		</div>
+	</div>
 </section>
