--- a/app/views/post.template.html
+++ b/app/views/post.template.html
@@ -2,8 +2,12 @@
 	<img ng-src="{{postCtl.post.img}}" alt="" />
 	<div class="card-body">
 		<h4>{{postCtl.post.title}}</h4>
-		<hr>
 		<p>{{postCtl.post.body}}</p>
-		<a href="#/" class="btn">Back to posts list</a>
+	</div>
+</section>
+
+<section class="comments card">
+	<div class="card-body">
+		<dir-disqus config="postCtl.disqusConfig"></dir-disqus>
 	</div>
 </section>
