--- a/app/views/posts.template.html
+++ b/app/views/posts.template.html
@@ -1,11 +1,12 @@
 <section id="posts">
-	<div class="post-item card" ng-repeat="post in postsCtl.posts">
-		<img ng-src="{{post.img}}" alt="" />
+	<article class="post-item card" ng-repeat="post in postsCtl.posts track by post.id">
+		<img ng-src="{{post.img}}" alt=""/>
 		<div class="card-body">
 			<h4>{{post.title}}</h4>
-			<hr>
 			<p>{{post.body}}</p>
-			<a ng-href="#/posts/{{post.id}}/{{post.slug}}" class="btn">Read More</a>
 		</div>
-	</div>
+		<div class="card-footer">
+			<a ng-href="#!/posts/{{post.id}}/{{post.slug}}" class="btn flat">Read More</a>
+		</div>
+	</article>
 </section>
